GNOME Bugzilla – Bug 720177
glvideomixer: texture coordinate does not update with commit "GL_TEXTURE_2D instead of GL_TEXTURE_RECTANGLE"
Last modified: 2013-12-16 00:55:10 UTC
in commit fffdcb "gl: Use GL_TEXTURE_2D instead of GL_TEXTURE_RECTANGLE" glvideomixer still uses texture coordinate in GL_TEXTURE_RECTANGLE, leads wrong result. this simple patch fix it.
Created attachment 263890 [details] [review] small patch to fix the problem just replace texture coordinate with [0~1] range values
Please attach patches in "git format-patch" format in the future, and make sure to use your real name there :) I got it from a previous patch you provided in the past now. commit 63d8f0332846a48adbe37a2c97a377ea0654ce72 Author: Wang Xin-yu (王昕宇) <comicfans44@gmail.com> Date: Sat Dec 14 19:12:09 2013 +0100 glvideomixer: Use correct coordinates after the switch from GL_TEXTURE_RECTANGLE to GL_TEXTURE_2D https://bugzilla.gnome.org/show_bug.cgi?id=720177
(In reply to comment #2) > Please attach patches in "git format-patch" format in the future, and make sure > to use your real name there :) I got it from a previous patch you provided in > the past now. > > commit 63d8f0332846a48adbe37a2c97a377ea0654ce72 > Author: Wang Xin-yu (王昕宇) <comicfans44@gmail.com> > Date: Sat Dec 14 19:12:09 2013 +0100 > > glvideomixer: Use correct coordinates after the switch from > GL_TEXTURE_RECTANGLE to GL_TEXTURE_2D > > https://bugzilla.gnome.org/show_bug.cgi?id=720177 Sorry, I'm not familiar with bugzilla currently, I'll try better