[840/906] glvideomixer: Use correct coordinates after the switch from GL_TEXTURE_RECTANGLE to GL_TEXTURE_2D

https://bugzilla.gnome.org/show_bug.cgi?id=720177